--- a/_posts/2015-04-27-kps-fall-2015.md
+++ b/_posts/2015-04-27-kps-fall-2015.md
@@ -4,6 +4,7 @@ title:      KPS Fall 2015
 date:       2015-04-27 15:31:19
 summary:    The KPS season finale looking for a happy ending
 permalink:	kps-fall-2015
+tags: index
 ---
 
 The KPS season finale: looking for a happy ending.
