--- a/_posts/2015-04-27-kps-fall-2015.md
+++ b/_posts/2015-04-27-kps-fall-2015.md
@@ -4,8 +4,10 @@ title:      KPS Fall 2015
 date:       2015-04-27 15:31:19
 summary:    The KPS season finale looking for a happy ending
 permalink:	kps-fall-2015
-tags: index
+tags: _
 ---
+
+**Well. I'm no longer sharing my weird moments. Just ignore the post.**
 
 The KPS season finale: looking for a happy ending.
 
